--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,6 @@ install:
   - npm install -g codecov
 
 script:
-  - istanbul cover ./node_modules/lab/bin/lab --report lcovonly  -- -l  && codecov
+  - npm test
+  - istanbul cover ./node_modules/lab/bin/lab --report lcovonly  -- -l
   - codecov
