test with multiple node vs

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,12 @@ node_js:
   - "11"
 
 before_script:
+  - npm install
   - npm install big-time --save-dev
   - npm install istanbul --save-dev
 
 install:
-  - npm install -g codecov
+  - npm install -g codecov --save-dev
 
 script:
   - npm test
