--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "subdomains",
-  "version": "0.0.8",
-  "description": "A hapi plugin which extracts subdomains form uri",
+  "version": "0.0.9",
+  "description": "A hapi plugin which extracts subdomains from uri",
   "main": "plugin/index.js",
   "scripts": {
     "test": "lab -c"
